--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="building_potion">建筑工人药水加速</string>
     <string name="lab_potion">研究药水加速</string>
     <string name="bellTower_potion">时光钟楼药水加速</string>
+    <string name="save">保存</string>
 </resources>
